DAL Repositories + API User Controller + JWT Helper

--- a/PlagiarismApi/appsettings.json
+++ b/PlagiarismApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PlagiarismConnectionString": "Data Source=DESKTOP-P9VIE04\\MSSQLENTERPRISE; Initial Catalog=Plagiarism;Integrated Security=True"
+  }
 }
