--- a/PlagiarismApi/appsettings.json
+++ b/PlagiarismApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PlagiarismConnectionString": "Data Source=DESKTOP-P9VIE04\\MSSQLENTERPRISE; Initial Catalog=Plagiarism;Integrated Security=True"
+    "PlagiarismConnectionString": "Data Source=DESKTOP-LOBB809; Initial Catalog=Plagiarism;Integrated Security=True"
   }
 }
